--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -29,7 +29,7 @@
 			</td>
 			<td>
 				<a [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
-				<button (click)="alert('Excluir')" class="btn btn-outline-danger btn-sm">Excluir</button>
+				<button class="btn btn-outline-danger btn-sm">Excluir</button>
 			</td>
 		</tr>
 	</tbody>
